--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAPTCHA Challenge</title>
     
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
     <div class="captcha-container">
